# win-iconv

./: CMakeLists.txt
include/: iconv.h
src/: win_iconv.c
